tools/crates/vendor/toml_edit/tests/fixtures/invalid/inline-table/overwrite-05.stderr
TOML parse error at line 3, column 1
  |
3 | [inline-t.nest]
  | ^
invalid table header
dotted key `inline-t` attempted to extend non-table type (inline table)
